2014-11-26  Andy Buckley  <andy.buckley@cern.ch>

	* Interface improvements in DressedLeptons constructor.

	* Adding DEPRECATED macro to throw compiler deprecation warnings when using deprecated features.

2014-11-25  Andy Buckley  <andy.buckley@cern.ch>

	* Adding Cut-based constructors, and various constructors with
	lists of PDG codes to IdentifiedFinalState.

2014-11-20  Andy Buckley  <andy.buckley@cern.ch>

	* Analysis updates (ATLAS, CMS, CDF, D0) to apply the changes below.

	* Adding JetAlg jets(Cut, Sorter) methods, and other interface
	improvements for cut and sorted ParticleBase retrieval from JetAlg
	and ParticleFinder projections. Some old many-doubles versions
	removed, syntactic sugar sorting methods deprecated.

	* Adding Cuts::Et and Cuts::ptIn, Cuts::etIn, Cuts::massIn.

	* Moving FastJet includes, conversions, uses etc. into Tools/RivetFastJet.hh

2014-10-07  Andy Buckley  <andy.buckley@cern.ch>

	* Fix a bug in the isCharmHadron(pid) function and remove isStrange* functions.

2014-09-30  Andy Buckley  <andy.buckley@cern.ch>

	* 2.2.0 release!

	* Mark Jet::containsBottom and Jet::containsCharm as deprecated
	methods: use the new methods. Analyses updated.

	* Add Jet::bTagged(), Jet::cTagged() and Jet::tauTagged() as
	ghost-assoc-based replacements for the 'contains' tagging methods.

2014-09-17  Andy Buckley  <andy.buckley@cern.ch>

	* Adding support for 1D and 3D YODA scatters, and helper methods
	for calling the efficiency, asymm and 2D histo divide functions.

2014-09-12  Andy Buckley  <andy.buckley@cern.ch>

	* Adding 5 new ATLAS analyses:
	ATLAS_2011_I921594: Inclusive isolated prompt photon analysis with full 2010 LHC data
	ATLAS_2013_I1263495: Inclusive isolated prompt photon analysis with 2011 LHC data
	ATLAS_2014_I1279489: Measurements of electroweak production of dijets + $Z$ boson, and distributions sensitive to vector boson fusion